# war3-connect

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
build-test/: CMakeCache.txt  Makefile  cmake_install.cmake  war3-lobby-server
client/: CMakeLists.txt  game_launcher.c  game_launcher.h  gui.c  gui.h  gui_lobby.c  gui_login.c  gui_room.c  gui_style.c  gui_style.h  injector.c  injector.h  main.c  net_client.c  net_client.h  resource.h
common/: message.h  protocol.c  protocol.h
docs/: PROTOCOL.md
hook_dll/: config.c  config.h  dllmain.c  hook.c
server/: handler.c  handler.h  main.c  room.c  room.h  server.c  server.h  user.c  user.h
src/hook_dll/: config.c  config.h  dllmain.c  hook.c  hook.h
src/launcher/: injector.c  injector.h  main.c
